[package]
name = "rustyluna"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
serialport = "4.2.0"
stick = "0.12.4"
regex = "1.5.6"

anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.29", features = ["tokio1"] }
tokio = { version = "1.0", features = ["macros"] }